Give the shaker corpus run a working directory it owns
JvmClassShakerCorpusTest ran the ci-spec corpus IN PROCESS, so in the project
root -- shared with the second surefire fork, with every other checkout's build
on the box and with any orphaned one. One run writes 37 top-level entries there
(measured), and the test cleaned up by deleting every entry that was not in a
before-snapshot.

That is flaky in both directions, and both were demonstrated:

- The recorded failure of 2026-09-19 is the two 4519-line outputs differing on
  exactly ONE line -- the wild-pathnames case answered the staged wpc-sub/ tree
  in the first run and NIL in the second, because the tree was gone by then.
  %list-directory is File.list(), which reads an unreadable directory as an
  absent one and never signals, so the walk answers NIL rather than failing.
  Reproduced exactly, same single line, by removing ./wpc-sub/ between the runs.
- A file and a directory created by another shell in the project root while the
  class ran were both deleted, recursively, when it finished.

Each run now goes into a fresh @TempDir child and the program runs in a
SUBPROCESS, which is the only way a Java test can choose a working directory.
The two runs start from the same staged state instead of the second inheriting
the first's scratch files, the verifier check becomes a real JVM launch rather
than a URLClassLoader, and the class asserts the project root gained nothing.
CorpusFixtures loses the snapshot-and-delete pair with its last caller, so
nobody can reach for it again.

Cost on this box: 64 s against 69 s in process.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>